# BabylonNative-OfficeDev.VisualStudio.CMake

./: .gitignore  CMakeLists.txt
scripts/: copy-babylon-scripts.bat
